syntax = "proto3";

option java_multiple_files = true;
package be.cloud;

message PlayerRequest {
  string playerName = 1;
}

message PlayerStatus {
  string playerName = 1;
  int32 heartRate = 2;
  float lactate = 3;
  bool exhausted = 4;
}

message LivePlayerUpdate {
  string playerName = 1;
  int32 currentHeartRate = 2;
  float currentLactate = 3;
  int64 timestamp = 4;
}

message AnalysisResponse {
  string playerName = 1;
  string recommendation = 2;
  bool shouldSubstitute = 3;
  int32 fatigueLevel = 4;   // Hoe moe een speler is op een schaal van 10
}

service AnalyticsService {
  rpc GetPlayerStatus(PlayerRequest) returns (PlayerStatus);
  rpc StreamPlayerAnalytics(stream LivePlayerUpdate) returns (stream AnalysisResponse); // Stream zorgt voor Bidirectional Streaming --> uitbreiding
}